deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplevault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samplevault
  template:
    metadata:
      labels:
        app: samplevault
    spec:
      containers:
        - name: samplevault
          image: samplevault:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
