tarantool-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tarantool
spec:
  selector:
    matchLabels:
      app: tarantool
  serviceName: "tarantool"
  replicas: 1
  template:
    metadata:
      labels:
        app: tarantool
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: tarantool
          image: tarantool/tarantool:2.10.8
          args: ["tarantool", "/opt/tarantool/init.lua"]
          ports:
            - containerPort: 3301
              name: bin
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: data
              mountPath: /var/lib/tarantool
            - name: app
              mountPath: /opt/tarantool/init.lua
              subPath: init.lua
      volumes:
        - name: app
          configMap:
            name: app
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Mi
