tarantool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tarantool
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: ClusterIP
  ports:
    - port: 3301
      targetPort: 3301
  selector:
    app: tarantool
